--- a/mlprojects/mlframework/notebooks/Untitled.ipynb
+++ b/mlprojects/mlframework/notebooks/Untitled.ipynb
@@ -6,7 +6,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pandas as pd"
+    "import pandas as pd\n",
+    "import glob\n",
+    "import os\n",
+    "import sys\n",
+    "import numpy as np"
    ]
   },
   {
@@ -15,44 +19,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.read_csv('../input/bank-train.csv', index_col = 0)"
+    "os.chdir('../models')"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "age           int64\n",
-       "job          object\n",
-       "marital      object\n",
-       "education    object\n",
-       "default      object\n",
-       "balance       int64\n",
-       "housing      object\n",
-       "loan         object\n",
-       "contact      object\n",
-       "day           int64\n",
-       "month        object\n",
-       "duration      int64\n",
-       "campaign      int64\n",
-       "pdays         int64\n",
-       "previous      int64\n",
-       "poutcome     object\n",
-       "y            object\n",
-       "dtype: object"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "df.dtypes"
+    "path = os.getcwd()"
    ]
   },
   {
@@ -61,8 +37,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import sys\n",
-    "sys.path.append('../src/')"
+    "l = glob.glob(os.path.abspath(path) + '/*.csv')"
    ]
   },
   {
@@ -71,17 +46,30 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from feature_selection import Feature_Selection"
+    "files = [x for x in l if \"_feat_imps\" in x]"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['/Users/abhinavkatoch/Documents/Projects/vonarchwebsite/Projects/mlprojects/mlframework/models/randomforest_vif_feat_imps.csv',\n",
+       " '/Users/abhinavkatoch/Documents/Projects/vonarchwebsite/Projects/mlprojects/mlframework/models/randomforest_mixed_feat_imps.csv',\n",
+       " '/Users/abhinavkatoch/Documents/Projects/vonarchwebsite/Projects/mlprojects/mlframework/models/randomforest_none_feat_imps.csv',\n",
+       " '/Users/abhinavkatoch/Documents/Projects/vonarchwebsite/Projects/mlprojects/mlframework/models/randomforest_hclust_feat_imps.csv']"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "df['target'] = df['y']\n",
-    "df.drop(['y'], axis = 1, inplace = True)"
+    "files"
    ]
   },
   {
@@ -90,9 +78,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from sklearn.preprocessing import LabelEncoder\n",
-    "lbl = LabelEncoder()\n",
-    "df['target'] = lbl.fit_transform(df['target'].values)\n"
+    "li = []\n",
+    "\n",
+    "for filename in files:\n",
+    "    df = pd.read_csv(filename, header = None)\n",
+    "    li.append(df)\n",
+    "\n",
+    "frame = pd.concat(li, axis=1, ignore_index=True)"
    ]
   },
   {
@@ -101,47 +93,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "s = Feature_Selection(df, selector = 'vif', vif_threshold = 0.2, mixed = False)"
+    "frame.sort_values(by = 4, inplace = True)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 9,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "vif\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "['age',\n",
-       " 'pdays',\n",
-       " 'balance',\n",
-       " 'day',\n",
-       " 'campaign',\n",
-       " 'job',\n",
-       " 'marital',\n",
-       " 'education',\n",
-       " 'default',\n",
-       " 'housing',\n",
-       " 'loan',\n",
-       " 'contact',\n",
-       " 'month',\n",
-       " 'poutcome']"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "s.get_features()"
+    "frame.drop([0, 2, 6], axis = 1, inplace = True)"
    ]
   },
   {
@@ -150,33 +111,30 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "s = Feature_Selection(df, selector = 'hclust')"
+    "cols = [4, 3, 1, 7, 5]\n",
+    "frame = frame[cols]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "hclust\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "[Parallel(n_jobs=-1)]: Using backend ThreadingBackend with 4 concurrent workers.\n",
-      "[Parallel(n_jobs=-1)]: Done  42 tasks      | elapsed:    0.1s\n",
-      "[Parallel(n_jobs=-1)]: Done  50 out of  50 | elapsed:    0.1s finished\n"
+     "ename": "AttributeError",
+     "evalue": "'NoneType' object has no attribute 'columns'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-12-4bd2b956a2db>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mframe\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfillna\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0minplace\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;32mTrue\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcolumns\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0;34m'feature'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'base'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'vif'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'hclust'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'mixed'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m: 'NoneType' object has no attribute 'columns'"
      ]
     }
    ],
    "source": [
-    "s.get_features()"
+    "frame.fillna(0, inplace = True)\n",
+    "fra"
    ]
   },
   {
